Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
see the video 0.4.15-dev-5681-gf9dcd5c_cannot_save_empty_file.webm
, I do hit Control+S and I do expect the * sign in the titlebar to vanish, but that does not happen when the file is entirely blank. The * will always come back.
react.log is quite useless as nothing is logged when I try
To me this looks related to regression https://jira.reactos.org/browse/CORE-18826 but I have not bisected yet.
Can anybody confirm my observation please on latest master head (I do have some local modifications in my local branch, but those definitely should not affect notepad)
Attachments
Issue Links
- relates to
-
CORE-18826 Opening "empty test.txt" file onto notepad leads to "Handle is invalid" error
-
- Resolved
-