[NOTEPAD] Fix and improve DoSaveFile (#5066)

- Use EM_GETHANDLE to get the text.
- Check zero size and handle it elegantly.
CORE-18832